@@ -1,0 +1,6 @@
+Description: Unpublished Games
+Default: 0
+Example: 1
+Type: boolean
+
+Also show unpublished games from the online game database.
